Fix info box alignment

--- a/src/scss/frontend-rtl.scss
+++ b/src/scss/frontend-rtl.scss
@@ -25,3 +25,10 @@
     padding-left: 15px;
 	text-align: left !important;
 }
+
+.rtl {
+	.top-icon .aio-icon-description,
+	.top-icon .aio-icon-header{
+		text-align: right;
+	}
+}
