--- a/src/scss/parts/frontend/custom.scss
+++ b/src/scss/parts/frontend/custom.scss
@@ -34,3 +34,7 @@
 .wpb_single_image img{
 	vertical-align: middle;
 }
+
+.top-icon .aio-icon-header{
+	text-align: left;
+}
